fix padding around footer elements, add padding for h2 and spacing in about us

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ h1, h2 {
     text-transform: uppercase;
     letter-spacing: 4px;
     color: #252525;
+    padding: 20px;
 }
 
 #logo {
@@ -31,7 +32,7 @@ h1, h2 {
 /* navigational links */
 
 #menu {
-    font-size: 1.1em;
+    font-size: 1.3em;
     letter-spacing: 4px;
     float: right;
     font-weight: 600;
@@ -106,8 +107,8 @@ h1, h2 {
 /* products section*/
 
 #products-title {
-    padding: 50px;
-    font-size: 2.0em;
+ /*   padding: 50px; */
+/*    font-size: 2.0em; */
     text-align: center;
 }
 
@@ -164,8 +165,8 @@ footer ul > li {
 
 footer i {
     font-size: 1.6em;
-    margin: 1%;
-    padding: 5%;
+    margin: 1px;
+    padding: 2px;
     color: #3a3a3a;
 }
 
@@ -182,6 +183,7 @@ footer i {
     grid-template-columns: auto auto auto;
     grid-gap: 60px;
     padding: 50px;
+    text-align: center;
 }
 
 .card {
@@ -194,9 +196,14 @@ footer i {
 }
 
 .card img {
-    object-fit: contain;
+/*object-fit: contain;*/
     height: 100%;
     width: 100%;
+}
+
+.container {
+    text-align: justify;
+    padding: 20px;
 }
 
 /* product details page*/
@@ -346,6 +353,7 @@ footer i {
         grid-template-columns: 1fr;
         grid-gap: 20px;
         height: auto;
+        padding: 20px;
     }
 
 /* for product details page */    
